[package]
name = "sorting_algorithms"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic = "0.6.0"
bytemuck = "1.16.0"
crossbeam-channel = "0.5.12"
mimalloc = "0.1.42"
nannou = "0.19.0"
nannou_audio = "0.19.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
parking_lot = "0.12.3"
thread-priority = "1.1.0"

[profile.dev]
debug = "full"

[profile.release]
# This option is crucial in order to catch any sorting algorithms which may panic.
panic = "unwind"
codegen-units = 1
